--- a/package/reglinux/emulators/rpcs3/Config.in
+++ b/package/reglinux/emulators/rpcs3/Config.in
@@ -7,6 +7,7 @@ config BR2_PACKAGE_RPCS3
     select BR2_PACKAGE_FAUDIO
     select BR2_PACKAGE_FFMPEG_SWSCALE
     select BR2_PACKAGE_LIBEVDEV
+    select BR2_PACKAGE_LIBCURL
     select BR2_PACKAGE_LIBGLEW
     select BR2_PACKAGE_LIBGLU
     select BR2_PACKAGE_LIBUSB
