--- a/package/reglinux/emulators/shadps4/Config.in
+++ b/package/reglinux/emulators/shadps4/Config.in
@@ -15,6 +15,8 @@ config BR2_PACKAGE_SHADPS4
     select BR2_PACKAGE_VULKAN_HEADERS
     select BR2_PACKAGE_VULKAN_LOADER
     select BR2_PACKAGE_VULKAN_VALIDATIONLAYERS
+    select BR2_PACKAGE_FFMPEG
+
     help
       Sony Playstation 4 emulator.
 
