--- a/package/reglinux/utils/flatpak/Config.in
+++ b/package/reglinux/utils/flatpak/Config.in
@@ -4,6 +4,7 @@ config BR2_PACKAGE_FLATPAK
 	select BR2_PACKAGE_BOOST
 	select BR2_PACKAGE_BOOST_ATOMIC
 	select BR2_PACKAGE_BZIP2
+	select BR2_PACKAGE_GDK_PIXBUF
 	select BR2_PACKAGE_GLIB_NETWORKING
 	select BR2_PACKAGE_HOST_PYTHON3
 	select BR2_PACKAGE_HOST_PYTHON3_PYPARSING
