Very experimental JZ4770 WIP (musl+rpmalloc) and rk3128 temptative rk-6.1 kernel migration

--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -174,7 +174,6 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_TARGET_BATOCERA_IMAGES_DEFINITIONS
 	select BR2_PACKAGE_BASH				# bash shell, used as the interactive shell
 	# Note RNG_TOOLS not useful anymore we use seedrng from plymouth
-	#select BR2_PACKAGE_RNG_TOOLS			if !BR2_PACKAGE_BATOCERA_TARGET_RK3128 # system entropy. Currently disabled for RK3128 due to high CPU impact
 	select BR2_PACKAGE_REGLINUX_EMULATIONSTATION	# emulationstation
 	# Note : TODO Bundle carbon (and maybe neutral) in content downloader
 	#select BR2_PACKAGE_ES_THEME_CARBON		# emulationstation theme
@@ -282,15 +281,15 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_FLATPAK				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY # flatpak app packaging system
 	#select BR2_PACKAGE_BAUH				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY # flatpak gui
 	select BR2_PACKAGE_RYZENADJ				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY # ryzen apu configuration
-	select BR2_PACKAGE_SYNCTHING			if !BR2_PACKAGE_BATOCERA_TARGET_JZ4770 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # sync files across multiple batoceras
+	select BR2_PACKAGE_SYNCTHING				if !BR2_PACKAGE_BATOCERA_TARGET_JZ4770 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # sync files across multiple batoceras
 	select BR2_PACKAGE_RCLONE				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY # sync files in the cloud (require x86_64)
 	select BR2_PACKAGE_BTOP					if !BR2_PACKAGE_BATOCERA_TARGET_CHA	# htop alternative
 	select BR2_PACKAGE_MOKUTIL				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY # mokutil machine owner key utility
 
 	# Controllers
-	select BR2_PACKAGE_XONE					if !BR2_mipsel && !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # xbox receiver (require linux >= 4.15)
-	select BR2_PACKAGE_XPAD_NOONE				if !BR2_mipsel && !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # xbox receiver (require linux >= 4.15)
-	select BR2_PACKAGE_XPADNEO				if !BR2_mipsel && !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # xbox receiver (require linux >= 4.18)
+	select BR2_PACKAGE_XONE					if !BR2_mipsel && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # xbox receiver
+	select BR2_PACKAGE_XPAD_NOONE				if !BR2_mipsel && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # xbox receiver
+	select BR2_PACKAGE_XPADNEO				if !BR2_mipsel && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # xbox receiver
 	select BR2_PACKAGE_WII_U_GC_ADAPTER			if !BR2_mipsel && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # wii-u-gc-adapter
 	select BR2_PACKAGE_WIIMOTES_RULES			if !BR2_mipsel && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # wiimotes
 	select BR2_PACKAGE_WIIMOTE_3RDPARTY			if !BR2_mipsel && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # some non official wiimotes
@@ -298,7 +297,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 	select BR2_PACKAGE_BATOCERA_GUNS			if !BR2_mipsel && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_RK3128 && !BR2_PACKAGE_BATOCERA_TARGET_CHA
 	select BR2_PACKAGE_BATOCERA_WHEEL_CALIBRATOR		if !BR2_mipsel && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_RK3128 && !BR2_PACKAGE_BATOCERA_TARGET_CHA
 	select BR2_PACKAGE_NEW_LG4FF				if !BR2_mipsel && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_RK3128 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # Improved Linux module driver for Logitech driving wheels (the lg4ff is disabled in kernels)
-	select BR2_PACKAGE_HID_NX				if !BR2_mipsel && !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # updated nintendo switch controller driver, requires kernel > 4.4
+	select BR2_PACKAGE_HID_NX				if !BR2_mipsel && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # updated nintendo switch controller driver
 	select BR2_PACKAGE_JOYCOND				if BR2_PACKAGE_HID_NX # nintendo switch joycon daemon (requires hid-nx)
 	select BR2_PACKAGE_JAMMASD				if !BR2_mipsel && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_CHA
 	select BR2_PACKAGE_QTSIXA_SHANWAN			if !BR2_mipsel && !BR2_PACKAGE_BATOCERA_TARGET_RK3326 && !BR2_PACKAGE_BATOCERA_TARGET_CHA # ps3 pad
@@ -368,7 +367,6 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 						   !BR2_PACKAGE_BATOCERA_TARGET_CHA		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_RK3326		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_RK3588		&& \
-						   !BR2_PACKAGE_BATOCERA_TARGET_RK3128		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_S812		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_ODIN		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_H700
@@ -512,7 +510,8 @@ config BR2_TARGET_BATOCERA_IMAGES_DEFINITIONS
 	default "broadcom/bcm2712"									if BR2_PACKAGE_BATOCERA_TARGET_BCM2712
 
 	# Rockchip targets
-	default "rockchip/rk3128/ps5000 rockchip/rk3128/ps7000 rockchip/rk3128/powkiddy-a13"		if BR2_PACKAGE_BATOCERA_TARGET_RK3128
+	#default "rockchip/rk3128/ps5000 rockchip/rk3128/ps7000 rockchip/rk3128/powkiddy-a13"		if BR2_PACKAGE_BATOCERA_TARGET_RK3128
+	default "rockchip/rk3128/ps5000 rockchip/rk3128/ps7000"						if BR2_PACKAGE_BATOCERA_TARGET_RK3128
 	default "rockchip/rk3288/tinkerboard rockchip/rk3288/miqi"					if BR2_PACKAGE_BATOCERA_TARGET_RK3288
 	default "rockchip/rk3326"									if BR2_PACKAGE_BATOCERA_TARGET_RK3326
 	default "rockchip/rk3328/rock64 rockchip/rk3328/renegade"					if BR2_PACKAGE_BATOCERA_TARGET_RK3328
@@ -823,7 +822,7 @@ config BR2_PACKAGE_BATOCERA_GAMESTREAM_SYSTEMS
 	bool "batocera.linux game streaming support"
 
 	# Game streaming
-	select BR2_PACKAGE_MOONLIGHT_EMBEDDED	if !BR2_PACKAGE_BATOCERA_TARGET_RK3128 && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_JZ4770
+	select BR2_PACKAGE_MOONLIGHT_EMBEDDED	if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_JZ4770
 
 #### ScummVM ####
 config BR2_PACKAGE_BATOCERA_SCUMMVM_SYSTEMS
@@ -1229,8 +1228,7 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 
 	# Sonic 3 AIR (Angel Island Revisited)
 	# Disabled with musl libc because it does not link (libatomic should do it but it does not work so far)
-	# Disabled for rk3128 because of mali blobs (needs patching at link-time to mali blob)
-	select BR2_PACKAGE_SONIC3_AIR			if !BR2_PACKAGE_BATOCERA_TARGET_RK3128 && !BR2_TOOLCHAIN_USES_MUSL
+	select BR2_PACKAGE_SONIC3_AIR			if !BR2_TOOLCHAIN_USES_MUSL
 
 	# Sonic Mania
 	select BR2_PACKAGE_SONIC_MANIA			# ALL
@@ -1682,7 +1680,7 @@ config BR2_PACKAGE_BATOCERA_GUNS
 	select BR2_PACKAGE_GUN4IR_GUNS				# gun4ir guns
 	select BR2_PACKAGE_RETROSHOOTER_GUNS			# retroshooter guns
 	select BR2_PACKAGE_GUNCON				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_BCM2711 || BR2_PACKAGE_BATOCERA_TARGET_BCM2837 # guncon
-	select BR2_PACKAGE_GUNCON3				if !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # guncon3
+	select BR2_PACKAGE_GUNCON3				# guncon3
 	select BR2_PACKAGE_LIGHTGUNS_GAMES_PRECALIBRATIONS
 	select BR2_PACKAGE_DOLPHINCROSSHAIRSPACK		if BR2_PACKAGE_DOLPHIN_EMU
 	select BR2_PACKAGE_STEAMDECKGUN				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
@@ -1690,22 +1688,14 @@ config BR2_PACKAGE_BATOCERA_GUNS
 config BR2_PACKAGE_BATOCERA_WPA
 	bool "batocera.linux WPA supplicant"
 
-	select BR2_PACKAGE_WPA_SUPPLICANT				if !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_CLI				if !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_DBUS				if !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_DBUS_INTROSPECTION		if !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_WIRED				if !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wpa_supplicant driver, 2.10 requires kernel > 4.4
-	select BR2_PACKAGE_WPA_SUPPLICANT_WPA3				if !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_NL80211			if !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wpa_supplicant driver
-	select BR2_PACKAGE_WPA_SUPPLICANT_WEXT				if !BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wpa_supplicant driver
-	select BR2_PACKAGE_WPA_SUPPLICANT_K44				if BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_K44_CLI			if BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_K44_DBUS			if BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_K44_DBUS_INTROSPECTION	if BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_K44_WIRED			if BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wpa_supplicant driver, 2.10 requires kernel > 4.4
-	select BR2_PACKAGE_WPA_SUPPLICANT_K44_WPA3			if BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wifi
-	select BR2_PACKAGE_WPA_SUPPLICANT_K44_NL80211			if BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wpa_supplicant driver
-	select BR2_PACKAGE_WPA_SUPPLICANT_K44_WEXT			if BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_4 # wpa_supplicant driver
+	select BR2_PACKAGE_WPA_SUPPLICANT				# wifi
+	select BR2_PACKAGE_WPA_SUPPLICANT_CLI				# wifi
+	select BR2_PACKAGE_WPA_SUPPLICANT_DBUS				# wifi
+	select BR2_PACKAGE_WPA_SUPPLICANT_DBUS_INTROSPECTION		# wifi
+	select BR2_PACKAGE_WPA_SUPPLICANT_WIRED				# wpa_supplicant driver
+	select BR2_PACKAGE_WPA_SUPPLICANT_WPA3				# wifi
+	select BR2_PACKAGE_WPA_SUPPLICANT_NL80211			# wpa_supplicant driver
+	select BR2_PACKAGE_WPA_SUPPLICANT_WEXT				# wpa_supplicant driver
 
 
 config BR2_PACKAGE_BATOCERA_RPI_MESA3D
