sway: bump to 1.10.1

--- a/custom/package/sway/Config.in
+++ b/custom/package/sway/Config.in
@@ -17,7 +17,7 @@ config BR2_PACKAGE_SWAY
 	select BR2_PACKAGE_CAIRO_PNG
 	select BR2_PACKAGE_PANGO
 	select BR2_PACKAGE_XKEYBOARD_CONFIG # runtime
-	select BR2_PACKAGE_LIBDECOR # batocera
+	select BR2_PACKAGE_LIBDECOR
 	help
 	  i3-compatible Wayland compositor
 	  Note:
