--- a/package/reglinux/libraries/vkd3d/Config.in
+++ b/package/reglinux/libraries/vkd3d/Config.in
@@ -1,11 +1,12 @@
 config BR2_PACKAGE_VKD3D
 	bool "vkd3d"
-        depends on BR2_i386 || BR2_x86_64
 	# Wine unconditionally builds shared libraries
 	depends on !BR2_STATIC_LIBS
+	depends on BR2_PACKAGE_REGLINUX_VULKAN
 	depends on BR2_PACKAGE_SPIRV_HEADERS
 	depends on BR2_PACKAGE_VULKAN_HEADERS
 	depends on BR2_PACKAGE_VULKAN_LOADER
+	select BR2_PACKAGE_HOST_WINE
 	help
 	  VkD3D Wine is a compatibility layer capable of running Windows
 	  applications on Linux. Instead of simulating internal
