--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -1532,7 +1532,8 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_PICODRIVE		# ALL
 	select BR2_PACKAGE_LIBRETRO_GENESISPLUSGX	# ALL
 	select BR2_PACKAGE_LIBRETRO_GENESISPLUSGX_WIDE	if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
-	select BR2_PACKAGE_LIBRETRO_BLASTEM		if BR2_ARCH_IS_64
+	# Blastem is broken ATM, disable
+	#select BR2_PACKAGE_LIBRETRO_BLASTEM		if BR2_ARCH_IS_64
 	select BR2_PACKAGE_LIBRETRO_SMSPLUS_GX		# ALL
 	select BR2_PACKAGE_LIBRETRO_GEARSYSTEM		# ALL
 
