--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -1851,9 +1851,8 @@ config BR2_PACKAGE_REGLINUX_XWAYLAND
 
 	# Xorg emulation layer of Wayland
 	select BR2_PACKAGE_XORG7
-	select BR2_PACKAGE_WESTON_XWAYLAND	if BR2_PACKAGE_REGLINUX_WESTON
-	select BR2_PACKAGE_WLROOTS_X11		if BR2_PACKAGE_REGLINUX_SWAY
-	select BR2_PACKAGE_WLROOTS_XWAYLAND	if BR2_PACKAGE_REGLINUX_SWAY
+	select BR2_PACKAGE_WLROOTS_X11		if BR2_PACKAGE_WLROOTS
+	select BR2_PACKAGE_WLROOTS_XWAYLAND	if BR2_PACKAGE_WLROOTS
 
 config BR2_PACKAGE_REGLINUX_XORGAPPS
 	bool "REG-Linux xorg desktop environment"
