--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -813,10 +813,10 @@ config BR2_PACKAGE_BATOCERA_FLASH_SYSTEMS
 	bool "batocera.linux Flash support"
 
 	# Ruffle implementation in Rust
-	select BR2_PACKAGE_RUFFLE		if BR2_ARCH_IS_64
+	select BR2_PACKAGE_RUFFLE		if BR2_ARCH_IS_64 || (BR2_arm && (!BR2_arm1176jzf_s))
 
 	# Lightspark implementation in C/C++
-	select BR2_PACKAGE_LIGHTSPARK		if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_mipsel
+	select BR2_PACKAGE_LIGHTSPARK		if BR2_PACKAGE_HAS_LIBGL
 
 #### Moonlight / Gamestream ####
 config BR2_PACKAGE_BATOCERA_GAMESTREAM_SYSTEMS
