--- a/package/reglinux/emulators/xenia-canary/Config.in
+++ b/package/reglinux/emulators/xenia-canary/Config.in
@@ -1,8 +1,11 @@
 config BR2_PACKAGE_XENIA_CANARY
     bool "xenia-canary"
     depends on BR2_x86_64
-    depends on BR2_PACKAGE_WINE_GE_CUSTOM
+    depends on BR2_PACKAGE_LLVM
+    depends on BR2_PACKAGE_CLANG
     select BR2_PACKAGE_PYTHON_TOML
+    select BR2_PACKAGE_LIBGTK3
+    select BR2_PACKAGE_SDL2
     help
         Xenia is an open source research project for emulating Xbox 360 games on modern PCs.
         This is the bleeding edge canary release.
