x86-32 cleanups (i386/586/686) + fix lr-blastem

--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -1538,9 +1538,9 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	# Sega 8-bit/16-range (Mark III / Master System, Game Gear, Genesis / Megadrive, SegaCD / MegaCD, 32X)
 	select BR2_PACKAGE_LIBRETRO_PICODRIVE		# ALL
 	select BR2_PACKAGE_LIBRETRO_GENESISPLUSGX	# ALL
-	select BR2_PACKAGE_LIBRETRO_GENESISPLUSGX_WIDE	if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
-	# Blastem is broken ATM, disable
-	#select BR2_PACKAGE_LIBRETRO_BLASTEM		if BR2_ARCH_IS_64
+	select BR2_PACKAGE_LIBRETRO_GENESISPLUSGX_WIDE	if BR2_ARCH_IS_64
+	# TODO test if blastem is still broken
+	select BR2_PACKAGE_LIBRETRO_BLASTEM		if BR2_ARCH_IS_64
 	select BR2_PACKAGE_LIBRETRO_SMSPLUS_GX		# ALL
 	select BR2_PACKAGE_LIBRETRO_GEARSYSTEM		# ALL
 
