Fix RPCS3 build on saphira target

--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -934,31 +934,12 @@ config BR2_PACKAGE_BATOCERA_ARCADE_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_IMAME		if BR2_PACKAGE_BATOCERA_TARGET_BCM2835 || BR2_PACKAGE_BATOCERA_TARGET_JZ4770 # IMAME
 	select BR2_PACKAGE_LIBRETRO_MAME2010		if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_CHA && !BR2_PACKAGE_BATOCERA_TARGET_JZ4770 # MAME2010
 
-	# RetroArch core (mainline MAME)
-	select BR2_PACKAGE_LIBRETRO_MAME		if  BR2_PACKAGE_MAME_BUILD_FROM_SOURCE  && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_JZ4770  && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_BCM2835	&& \
-							   !BR2_PACKAGE_BATOCERA_TARGET_BCM2836	&& \
-							   !BR2_PACKAGE_BATOCERA_TARGET_H3	&& \
-							   !BR2_PACKAGE_BATOCERA_TARGET_CHA	&& \
-							   !BR2_PACKAGE_BATOCERA_TARGET_RK3128
 	# Standalone MAME
-	select BR2_PACKAGE_MAME				if  BR2_PACKAGE_MAME_BUILD_FROM_SOURCE  && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_JZ4770  && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_BCM2836 && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_RK3128  && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_CHA     && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_H3
-
+	select BR2_PACKAGE_MAME				if  BR2_PACKAGE_MAME_BUILD_FROM_SOURCE && BR2_ARCH_IS_64
+	# RetroArch core (mainline MAME)
+	select BR2_PACKAGE_LIBRETRO_MAME		if  BR2_PACKAGE_MAME_BUILD_FROM_SOURCE && BR2_ARCH_IS_64
 	# Prebuilt MAME + lr-mame archive
-	select BR2_PACKAGE_REGLINUX_MAME		if !BR2_PACKAGE_MAME_BUILD_FROM_SOURCE  && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_JZ4770  && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_BCM2836 && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_RK3128  && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_CHA     && \
-							   !BR2_PACKAGE_BATOCERA_TARGET_H3
+	select BR2_PACKAGE_REGLINUX_MAME		if !BR2_PACKAGE_MAME_BUILD_FROM_SOURCE && BR2_ARCH_IS_64
 
 	help
 	  Arcade cores/emulators
@@ -1457,12 +1438,12 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
                                                            BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
-	# Sony PS3 (TODO saphira build error since BR bump)
+	# Sony PS3
 	select BR2_PACKAGE_RPCS3			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
-							   BR2_PACKAGE_BATOCERA_TARGET_SM8250
-							   #|| BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250	  || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	# Sony PS4
 	select BR2_PACKAGE_SHADPS4			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_V3
