board: rename to reglinux (WIP)

--- a/board/amlogic/s922x/odroid-n2/boot/boot.ini
+++ b/board/amlogic/s922x/odroid-n2/boot/boot.ini
@@ -1,6 +1,6 @@
 ODROIDN2-UBOOT-CONFIG
 
-setenv bootlabel "Batocera"
+setenv bootlabel "REGLinux"
 setenv variant "n2"
 
 # Set load addresses (from updated U-boot 2023.01 defaults)
