--- a/board/amlogic/s922x/odroid-n2l/boot/boot.ini
+++ b/board/amlogic/s922x/odroid-n2l/boot/boot.ini
@@ -1,6 +1,6 @@
 ODROIDN2L-UBOOT-CONFIG
 
-setenv bootlabel "Batocera"
+setenv bootlabel "REGLinux"
 setenv board "odroidn2l"
 
 # Set load addresses
