--- a/board/rockchip/rk3288/tinkerboard/boot/extlinux.conf
+++ b/board/rockchip/rk3288/tinkerboard/boot/extlinux.conf
@@ -1,6 +1,6 @@
 DEFAULT reg.linux
 
-LABEL reg.linux
+LABEL REG-Linux
 LINUX /boot/linux
 FDT /boot/rk3288-tinker.dtb
 APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=uart8250,mmio32,0xff690000
