--- a/board/x86/boot/syslinux.cfg
+++ b/board/x86/boot/syslinux.cfg
@@ -10,14 +10,14 @@ MENU TITLE REG.linux
 MENU HIDDEN
 
 LABEL REGLINUX
-	MENU LABEL REG.linux (^normal)
+	MENU LABEL REG-Linux (^normal)
 	MENU DEFAULT
 	LINUX /boot/linux
 	APPEND label=REGLINUX quiet splash mitigations=off
 	INITRD /boot/initrd.lz4
 
 LABEL verbose
-	MENU lABEL REG.linux (^verbose)
+	MENU lABEL REG-Linux (^verbose)
 	LINUX /boot/linux
 	APPEND label=REGLINUX vt.global_cursor_default=0
 	INITRD /boot/initrd.lz4
