--- a/board/allwinner/h3/orangepi-one/boot/extlinux.conf
+++ b/board/allwinner/h3/orangepi-one/boot/extlinux.conf
@@ -1,4 +1,4 @@
-LABEL reg.linux
-  LINUX /boot/linux
-  FDT /boot/sun8i-h3-orangepi-one.dtb
-  APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyS0,115200
+LABEL REG-Linux
+    LINUX /boot/linux
+    FDT /boot/sun8i-h3-orangepi-one.dtb
+    APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyS0,115200
