--- a/board/allwinner/h5/orangepi-pc2/boot/extlinux.conf
+++ b/board/allwinner/h5/orangepi-pc2/boot/extlinux.conf
@@ -1,4 +1,4 @@
-LABEL reg.linux
-  LINUX /boot/linux
-  FDT /boot/sun50i-h5-orangepi-pc2.dtb
-  APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyS0,115200
+LABEL REG-Linux
+    LINUX /boot/linux
+    FDT /boot/sun50i-h5-orangepi-pc2.dtb
+    APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyS0,115200
