--- a/board/allwinner/h6/orangepi-3-lts/boot/extlinux.conf
+++ b/board/allwinner/h6/orangepi-3-lts/boot/extlinux.conf
@@ -1,4 +1,4 @@
-LABEL reg.linux
-  LINUX /boot/linux
-  FDT /boot/sun50i-h6-orangepi-3-lts.dtb
-  APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyS0,115200
+LABEL REG-Linux
+    LINUX /boot/linux
+    FDT /boot/sun50i-h6-orangepi-3-lts.dtb
+    APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyS0,115200
