--- a/board/allwinner/h616/orangepi-zero2w/boot/extlinux.conf
+++ b/board/allwinner/h616/orangepi-zero2w/boot/extlinux.conf
@@ -1,4 +1,4 @@
-LABEL reg.linux
-  LINUX /boot/linux
-  FDT /boot/sun50i-h618-orangepi-zero2w.dtb
-  APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyS0,115200
+LABEL REG-Linux
+    LINUX /boot/linux
+    FDT /boot/sun50i-h618-orangepi-zero2w.dtb
+    APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyS0,115200
