--- a/board/amlogic/s905/khadas-vim1/boot/extlinux.conf
+++ b/board/amlogic/s905/khadas-vim1/boot/extlinux.conf
@@ -1,4 +1,4 @@
-LABEL Batocera.linux
-LINUX /boot/linux
-FDT /boot/meson-gxl-s905x-khadas-vim.dtb
-APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyAML0,115200n8
+LABEL REG-Linux
+    LINUX /boot/linux
+    FDT /boot/meson-gxl-s905x-khadas-vim.dtb
+    APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyAML0,115200n8
