--- a/board/amlogic/s905/minix-neo-u1/boot/extlinux.conf
+++ b/board/amlogic/s905/minix-neo-u1/boot/extlinux.conf
@@ -1,4 +1,4 @@
-LABEL Batocera.linux
-LINUX /boot/linux
-FDT /boot/meson-gxbb-minix-neo-u1.dtb
-APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyAML0,115200n8
+LABEL REG-Linux
+    LINUX /boot/linux
+    FDT /boot/meson-gxbb-minix-neo-u1.dtb
+    APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyAML0,115200n8
