--- a/board/amlogic/s905/odroid-c2/boot/extlinux.conf
+++ b/board/amlogic/s905/odroid-c2/boot/extlinux.conf
@@ -1,4 +1,4 @@
-LABEL reg.linux
-LINUX /boot/linux
-FDT /boot/meson-gxbb-odroidc2.dtb
-APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyAML0,115200n8
+LABEL REG-Linux
+    LINUX /boot/linux
+    FDT /boot/meson-gxbb-odroidc2.dtb
+    APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyAML0,115200n8
