--- a/board/amlogic/s922x/khadas-vim3/boot/extlinux.conf
+++ b/board/amlogic/s922x/khadas-vim3/boot/extlinux.conf
@@ -1,4 +1,4 @@
-LABEL Batocera.linux
+LABEL REG-Linux
     LINUX /boot/linux
     FDT /boot/meson-g12b-a311d-khadas-vim3.dtb
     APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyAML0,115200n8 vt.global_cursor_default=0
