--- a/board/amlogic/s922x/odroid-n2/boot/extlinux.conf
+++ b/board/amlogic/s922x/odroid-n2/boot/extlinux.conf
@@ -1,5 +1,5 @@
 # keep this file before the init n2 image was done with the mainline uboot
-LABEL Batocera.linux
-LINUX /boot/linux
-FDT /boot/meson-g12b-odroid-n2.dtb
-APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyAML0,115200n8
+LABEL REG-Linux
+    LINUX /boot/linux
+    FDT /boot/meson-g12b-odroid-n2.dtb
+    APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyAML0,115200n8
