--- a/board/amlogic/s922x/radxa-zero2/boot/extlinux.conf
+++ b/board/amlogic/s922x/radxa-zero2/boot/extlinux.conf
@@ -1,4 +1,4 @@
-LABEL Batocera.linux
+LABEL REG-Linux
 	LINUX /boot/linux
 	FDT /boot/meson-g12b-radxa-zero2.dtb
 	APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyAML0,115200n8
