--- a/board/qualcomm/sd845/odin/grub.cfg
+++ b/board/qualcomm/sd845/odin/grub.cfg
@@ -1,7 +1,7 @@
 set default="0"
 set timeout="0"
 
-menuentry "Batocera" {
+menuentry "REGLinux" {
     linux /boot/Image label=REGLINUX rootwait console=tty0 console=ttyMSM0,115200n8 clk_ignore_unused pd_ignore_unused
     initrd /boot/initrd.lz4
     devicetree /boot/sdm845-ayn-odin.dtb
