--- a/board/rockchip/rk3128/linux-defconfig-fragment.config
+++ b/board/rockchip/rk3128/linux-defconfig-fragment.config
@@ -7,7 +7,7 @@ CONFIG_CHR_DEV_SG=m
 # required for evmapy
 CONFIG_INPUT_UINPUT=y
 
-# required for batocera squashfs
+# required for reglinux squashfs
 CONFIG_NLS_ISO8859_1=y
 CONFIG_SQUASHFS=y
 CONFIG_OVERLAY_FS=y
