--- a/board/rockchip/rk3288/miqi/boot/extlinux.conf
+++ b/board/rockchip/rk3288/miqi/boot/extlinux.conf
@@ -1,4 +1,4 @@
-LABEL reg.linux
-  LINUX /boot/linux
-  FDT /boot/rk3288-miqi.dtb
-  APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=uart8250,mmio32,0xff690000
+LABEL REG-Linux
+    LINUX /boot/linux
+    FDT /boot/rk3288-miqi.dtb
+    APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=uart8250,mmio32,0xff690000
