--- a/board/rockchip/rk3568/rock-3a/boot/extlinux.conf
+++ b/board/rockchip/rk3568/rock-3a/boot/extlinux.conf
@@ -1,4 +1,4 @@
-LABEL reg.linux
+LABEL REG-Linux
 LINUX /boot/linux
 FDT /boot/rk3568-rock-3a.dtb
 APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyS2,1500000n8
