--- a/board/rockchip/rk3588/quartzpro64/boot/extlinux.conf
+++ b/board/rockchip/rk3588/quartzpro64/boot/extlinux.conf
@@ -1,4 +1,4 @@
-LABEL reg.linux
-  LINUX /boot/linux
-  FDT /boot/rk3588-evb1-lp4-v10-linux.dtb
-  APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyS0,115200n8 coherent_pool=2M
+LABEL REG-Linux
+    LINUX /boot/linux
+    FDT /boot/rk3588-evb1-lp4-v10-linux.dtb
+    APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyS0,115200n8 coherent_pool=2M
