--- a/board/saphira/boot/EFI/batocera/grub.cfg
+++ b/board/saphira/boot/EFI/batocera/grub.cfg
@@ -1,8 +1,8 @@
 set default="0"
 set timeout="0"
 ​
-menuentry "Batocera.linux " {
-    echo Booting Batocera.linux..
+menuentry "REG-Linux " {
+    echo Booting REG-Linux..
     linux /boot/linux label=REGLINUX verbose loglevel=9
     initrd /boot/initrd.lz4
 }
