--- a/board/starfive/jh7110/boot/extlinux.conf
+++ b/board/starfive/jh7110/boot/extlinux.conf
@@ -1,4 +1,4 @@
-LABEL reg.linux
+LABEL REG-Linux
 LINUX /boot/linux
 FDT /dtbs/starfive/jh7110-starfive-visionfive-2-v1.2a.dtb
 APPEND initrd=/boot/initrd.lz4 label=REGLINUX rootwait quiet splash console=ttyS0,115200
