--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -1,3 +1,6 @@
+config BR2_PACKAGE_REGLINUX_RELEASE
+bool "release mode"
+default y
 
 ##### define variables to use in this file
 if BR2_PACKAGE_BATOCERA_RPI_MESA3D
@@ -99,6 +102,7 @@ if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY          || \
    BR2_PACKAGE_BATOCERA_TARGET_ROCKCHIP_GLES3   || \
    BR2_PACKAGE_BATOCERA_TARGET_ODIN             || \
    BR2_PACKAGE_BATOCERA_TARGET_SM8250           || \
+   BR2_PACKAGE_BATOCERA_TARGET_SM8550           || \
    BR2_PACKAGE_BATOCERA_TARGET_MT8395           || \
    BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
     config BR2_PACKAGE_BATOCERA_GLES3
@@ -357,6 +361,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 						    BR2_PACKAGE_BATOCERA_TARGET_S905GEN3	|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_S922X		|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
+						    BR2_PACKAGE_BATOCERA_TARGET_SM8550		|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_JH7110		|| \
 						    BR2_PACKAGE_BATOCERA_TARGET_K1
 
@@ -535,6 +540,7 @@ config BR2_TARGET_BATOCERA_IMAGES_DEFINITIONS
 	# Qualcomm targets
 	default "qualcomm/sd845/odin"									if BR2_PACKAGE_BATOCERA_TARGET_ODIN
 	default "qualcomm/sm8250/rp5 qualcomm/sm8250/rpmini"						if BR2_PACKAGE_BATOCERA_TARGET_SM8250
+	default "qualcomm/sm8550/odin2"									if BR2_PACKAGE_BATOCERA_TARGET_SM8550
 
 	# Mediatek targets
 	default "mediatek/mt8395/radxa-nio-12l"								if BR2_PACKAGE_BATOCERA_TARGET_MT8395
@@ -674,6 +680,9 @@ config BR2_PACKAGE_BATOCERA_TARGET_ODIN
 config BR2_PACKAGE_BATOCERA_TARGET_SM8250
 	bool "sm8250"
 
+config BR2_PACKAGE_BATOCERA_TARGET_SM8550
+	bool "sm8550"
+
 config BR2_PACKAGE_BATOCERA_TARGET_XU4
 	bool "xu4"
 
@@ -752,7 +761,7 @@ config BR2_PACKAGE_BATOCERA_ALL_SYSTEMS
 
 	select BR2_PACKAGE_REGLINUX_MULTI_SYSTEMS	if !BR2_PACKAGE_BATOCERA_TARGET_CHA
 	select BR2_PACKAGE_REGLINUX_PINBALL_SYSTEMS	if !BR2_PACKAGE_BATOCERA_TARGET_CHA
-	select BR2_PACKAGE_REGLINUX_MOBILE_SYSTEMS	if !BR2_PACKAGE_BATOCERA_TARGET_CHA
+	select BR2_PACKAGE_REGLINUX_MOBILE_SYSTEMS	if !BR2_PACKAGE_BATOCERA_TARGET_CHA && !BR2_PACKAGE_REGLINUX_RELEASE
 
 	help
 	  batocera.linux all supported emulation systems
@@ -778,6 +787,7 @@ config BR2_PACKAGE_REGLINUX_PINBALL_SYSTEMS
 						   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 						   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 						   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+						   BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
 						   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 
@@ -792,13 +802,13 @@ config BR2_PACKAGE_REGLINUX_MULTI_SYSTEMS
     select BR2_PACKAGE_BOX64			if BR2_aarch64 || BR2_RISCV_64
 
     # CLK - Clock Signal emulator
-    select BR2_PACKAGE_CLK			if BR2_PACKAGE_HAS_LIBGL
+    select BR2_PACKAGE_CLK			if !BR2_PACKAGE_REGLINUX_RELEASE && BR2_PACKAGE_HAS_LIBGL
 
     # Mednafen
     select BR2_PACKAGE_MEDNAFEN			if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_mipsel
 
     # Ares (OpenGL 3.3+ or Vulkan or wgpu)
-    select BR2_PACKAGE_ARES			if BR2_ARCH_IS_64 && BR2_PACKAGE_HAS_LIBGL && BR2_PACKAGE_REGLINUX_VULKAN
+    select BR2_PACKAGE_ARES			if !BR2_PACKAGE_REGLINUX_RELEASE && BR2_ARCH_IS_64 && BR2_PACKAGE_HAS_LIBGL && BR2_PACKAGE_REGLINUX_VULKAN
 
 #### Wine Layer ####
 config BR2_PACKAGE_BATOCERA_WINE_SYSTEMS
@@ -926,7 +936,10 @@ config BR2_PACKAGE_BATOCERA_ARCADE_SYSTEMS
 	select BR2_PACKAGE_MODEL2EMU		if BR2_PACKAGE_BATOCERA_WINE
 
 	# Standalone Sega Model 3 emulator
-	select BR2_PACKAGE_SUPERMODEL		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || BR2_PACKAGE_BATOCERA_TARGET_SM8250 || BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
+	select BR2_PACKAGE_SUPERMODEL		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+						   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+						   BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
+						   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 	select BR2_PACKAGE_SUPERMODEL_LEGACY	if BR2_PACKAGE_REGLINUX_XWAYLAND && !BR2_PACKAGE_SUPERMODEL
 
 	# RetroArch MAME derivatives (old cores)
@@ -970,6 +983,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 							    BR2_PACKAGE_BATOCERA_TARGET_BCM2712     || \
 							    BR2_PACKAGE_BATOCERA_TARGET_RK3588      || \
 							    BR2_PACKAGE_BATOCERA_TARGET_SM8250      || \
+							    BR2_PACKAGE_BATOCERA_TARGET_SM8550      || \
 							    BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA     || \
 							    BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
@@ -978,6 +992,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_S922X	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250	|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3568	|| \
@@ -996,6 +1011,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 	#						   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 	#						   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 	#						   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+	#						   BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
 	#						   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 	#						   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 	select BR2_PACKAGE_LIME3DS			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
@@ -1003,6 +1019,7 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 	select BR2_PACKAGE_CITRA			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
@@ -1010,13 +1027,16 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
-	select BR2_PACKAGE_PANDA3DS			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+	select BR2_PACKAGE_PANDA3DS			if !BR2_PACKAGE_REGLINUX_RELEASE          && \
+							   BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   (BR2_aarch64 && BR2_PACKAGE_BATOCERA_GLES3)
 
-	select BR2_PACKAGE_LIBRETRO_PANDA3DS		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
+	select BR2_PACKAGE_LIBRETRO_PANDA3DS		if !BR2_PACKAGE_REGLINUX_RELEASE          && \
+							   BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   (BR2_aarch64 && BR2_PACKAGE_BATOCERA_GLES3)
 
 	# PSP
@@ -1049,10 +1069,11 @@ config BR2_PACKAGE_BATOCERA_HANDHELD_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_ARDUOUS		# ALL
 
 	# Sony PS Vita
-	# Note: needs testing for bcm2712, rk3588, sm8250
+	# Note: needs testing
 	select BR2_PACKAGE_VITA3K			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712
 	# MegaDuck
@@ -1082,7 +1103,7 @@ config BR2_PACKAGE_BATOCERA_MSDOS_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_DOSBOX_PURE			# ALL
 
 	# 86Box uses Qt5/6 for UI but requires X11 right now
-	select BR2_PACKAGE_86BOX				if BR2_PACKAGE_HAS_LIBGL && (BR2_x86_64 || BR2_arm || BR2_aarch64)
+	select BR2_PACKAGE_86BOX				if !BR2_PACKAGE_REGLINUX_RELEASE && BR2_PACKAGE_HAS_LIBGL && (BR2_x86_64 || BR2_arm || BR2_aarch64)
 
 	help
 	 MS/DOS cores/emulators
@@ -1141,6 +1162,7 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
@@ -1149,7 +1171,7 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 
 	# Yamagi Quake 2 (source port)
 	# Note: Needs CMake work to build for GLES3 (or even GLES2 + gl4es)
-	select BR2_PACKAGE_YQUAKE2                      if BR2_PACKAGE_HAS_LIBGL # TODO || BR2_PACKAGE_BATOCERA_GLES3
+	select BR2_PACKAGE_YQUAKE2                      if !BR2_PACKAGE_REGLINUX_RELEASE && BR2_PACKAGE_HAS_LIBGL # TODO || BR2_PACKAGE_BATOCERA_GLES3
 
 	# Quake 3 (source port)
 	# Note : needs work on gl4es patch (applying it only if no desktop GL support)
@@ -1174,7 +1196,7 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 	select BR2_PACKAGE_CORSIXTH			if BR2_ARCH_IS_64
 
 	# GemRB (Infinity Engine for Baldur's Gate games)
-	select BR2_PACKAGE_GEMRB			if !BR2_PACKAGE_BATOCERA_TARGET_CHA && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_mipsel
+	select BR2_PACKAGE_GEMRB			if !BR2_PACKAGE_REGLINUX_RELEASE && !BR2_PACKAGE_BATOCERA_TARGET_CHA && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_mipsel
 
 	# The Force Engine
 	select BR2_PACKAGE_THEFORCEENGINE		if BR2_ARCH_IS_64 && BR2_PACKAGE_HAS_LIBGL # Requires OpenGL 3.3 or later
@@ -1207,10 +1229,10 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 	select BR2_PACKAGE_OPENLARA			if !BR2_PACKAGE_BATOCERA_TARGET_CHA
 
 	# Free Heroes of Might & Magic 2 engine
-	select BR2_PACKAGE_FHEROES2			if !BR2_PACKAGE_BATOCERA_TARGET_CHA
+	select BR2_PACKAGE_FHEROES2			if !BR2_PACKAGE_REGLINUX_RELEASE && !BR2_PACKAGE_BATOCERA_TARGET_CHA
 
 	# HoMM3 open source engine
-	select BR2_PACKAGE_VCMI				if BR2_ARCH_IS_64 && BR2_PACKAGE_BATOCERA_GLES3
+	select BR2_PACKAGE_VCMI				if !BR2_PACKAGE_REGLINUX_RELEASE && BR2_ARCH_IS_64 && BR2_PACKAGE_BATOCERA_GLES3
 
 	# ECWolf
 	select BR2_PACKAGE_ECWOLF			if !BR2_PACKAGE_BATOCERA_TARGET_CHA
@@ -1251,6 +1273,7 @@ config BR2_PACKAGE_BATOCERA_COMPUTER_SYSTEMS
                                                    BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
                                                    BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
                                                    BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+                                                   BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
                                                    BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
                                                    BR2_PACKAGE_BATOCERA_TARGET_MT8395
 	select BR2_PACKAGE_AMIBERRY_LITE	if !BR2_PACKAGE_AMIBERRY && !BR2_mipsel && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835
@@ -1259,7 +1282,7 @@ config BR2_PACKAGE_BATOCERA_COMPUTER_SYSTEMS
 
 	# Apple 2
 	select BR2_PACKAGE_APPLEWIN		# ALL
-	select BR2_PACKAGE_IZAPPLE2		if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_JZ4770
+	select BR2_PACKAGE_IZAPPLE2		if !BR2_PACKAGE_REGLINUX_RELEASE && !BR2_PACKAGE_BATOCERA_TARGET_BCM2835 && !BR2_PACKAGE_BATOCERA_TARGET_JZ4770
 
 	# Apple 2 GS
 	select BR2_PACKAGE_GSPLUS		# ALL
@@ -1268,13 +1291,13 @@ config BR2_PACKAGE_BATOCERA_COMPUTER_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_ATARI800	# ALL
 
 	# Tangerine Oric computers
-	select BR2_PACKAGE_ORICUTRON		# ALL
+	select BR2_PACKAGE_ORICUTRON		if !BR2_PACKAGE_REGLINUX_RELEASE # ALL
 
 	# Sinclair ZX Spectrum
 	select BR2_PACKAGE_LIBRETRO_FUSE	# ALL
 
 	# Amstrad CPC
-	select BR2_PACKAGE_SUGARBOX		if BR2_ARCH_IS_64 && BR2_PACKAGE_REGLINUX_HAS_QT6
+	select BR2_PACKAGE_SUGARBOX		if !BR2_PACKAGE_REGLINUX_RELEASE && BR2_ARCH_IS_64 && BR2_PACKAGE_REGLINUX_HAS_QT6
 	select BR2_PACKAGE_LIBRETRO_CAP32	# ALL
 
 	# Sinclair ZX80/81
@@ -1311,6 +1334,7 @@ config BR2_PACKAGE_BATOCERA_COMPUTER_SYSTEMS
 						   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 						   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 						   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+						   BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
 						   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 						   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
@@ -1335,6 +1359,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3568		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_S922X		|| \
@@ -1344,7 +1369,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 
 	# Gopher 64
 	# build error so far on cross-compiling, so x86_64_v3 only (because the build system explicitely set it)
-	select BR2_PACKAGE_GOPHER64			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_V3
+	select BR2_PACKAGE_GOPHER64			if !BR2_PACKAGE_REGLINUX_RELEASE && BR2_PACKAGE_BATOCERA_TARGET_X86_64_V3
 
 	# Dreamcast
 	select BR2_PACKAGE_BATOCERA_SEGADC		if !BR2_PACKAGE_BATOCERA_TARGET_BCM2835
@@ -1383,11 +1408,13 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712 || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250  || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
 	select BR2_PACKAGE_LIBRETRO_KRONOS		if BR2_PACKAGE_BATOCERA_TARGET_X86_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250  || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	select BR2_PACKAGE_LIBRETRO_YABASANSHIRO	if !BR2_RISCV_64 && \
@@ -1397,6 +1424,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_DOLPHIN_EMU			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
@@ -1407,10 +1435,12 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_CITRON			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_V3  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588
 	select BR2_PACKAGE_RYUJINX			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_V3  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588
 
 	# Triforce
@@ -1420,22 +1450,25 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	select BR2_PACKAGE_XEMU				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	# Microsoft Xbox 360
 	select BR2_PACKAGE_XENIA			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY && BR2_PACKAGE_BATOCERA_WINE_SYSTEMS
-	select BR2_PACKAGE_XENIA_CANARY			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_V3
+	select BR2_PACKAGE_XENIA_CANARY			if !BR2_PACKAGE_REGLINUX_RELEASE && BR2_PACKAGE_BATOCERA_TARGET_X86_64_V3
 
 	# Sony PS2
 	select BR2_PACKAGE_PCSX2			if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY
 	select BR2_PACKAGE_PLAY				if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
                                                            BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
                                                            BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+                                                           BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 	select BR2_PACKAGE_LIBRETRO_PLAY		if BR2_PACKAGE_BATOCERA_TARGET_X86_64_ANY || \
                                                            BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
                                                            BR2_PACKAGE_BATOCERA_TARGET_SM8250     || \
+                                                           BR2_PACKAGE_BATOCERA_TARGET_SM8550     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	# Sony PS3
@@ -1443,6 +1476,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250	  || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550	  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA
 
 	# Sony PS4
@@ -1453,7 +1487,8 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712    || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588     || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA    || \
-							   BR2_PACKAGE_BATOCERA_TARGET_SM8250
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8250	  || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550
 
 
 	# Panasonic 3DO
@@ -1485,6 +1520,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2	|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588   || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250   || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550   || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 
@@ -1544,6 +1580,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_A3GEN2  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250  || \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550  || \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA || \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395
 	select BR2_PACKAGE_LIBRETRO_BEETLE_PCE_FAST     if !BR2_PACKAGE_LIBRETRO_BEETLE_PCE
@@ -1572,11 +1609,12 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2711		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT6395
 
 	# Super Nintendo / Super Famicom
-	select BR2_PACKAGE_SNES9X			if (BR2_ARCH_IS_64 && BR2_PACKAGE_HAS_LIBGL)
+	select BR2_PACKAGE_SNES9X			if !BR2_PACKAGE_REGLINUX_RELEASE && (BR2_ARCH_IS_64 && BR2_PACKAGE_HAS_LIBGL)
 
 	select BR2_PACKAGE_LIBRETRO_SNES9X		if (!BR2_mipsel && !BR2_arm1176jzf_s)
 	select BR2_PACKAGE_LIBRETRO_SNES9X_NEXT		if BR2_mipsel || (!BR2_arm1176jzf_s && !BR2_PACKAGE_LIBRETRO_SNES9X)
@@ -1587,6 +1625,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_S922X		|| \
@@ -1598,6 +1637,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 							   BR2_PACKAGE_BATOCERA_TARGET_BCM2712		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3588		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_SM8250		|| \
+							   BR2_PACKAGE_BATOCERA_TARGET_SM8550		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_SAPHIRA		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_MT8395		|| \
 							   BR2_PACKAGE_BATOCERA_TARGET_RK3399		|| \
