--- a/package/reglinux/reglinux-system/Config.in
+++ b/package/reglinux/reglinux-system/Config.in
@@ -376,6 +376,7 @@ config BR2_PACKAGE_REGLINUX_SYSTEM
 						   !BR2_PACKAGE_BATOCERA_TARGET_RK3128		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_S812		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_ODIN		&& \
+						   !BR2_PACKAGE_BATOCERA_TARGET_SM8550		&& \
 						   !BR2_PACKAGE_BATOCERA_TARGET_H700
 
 	select BR2_PACKAGE_RTL8821AU_MORROWNR	if BR2_PACKAGE_BATOCERA_TARGET_S922X || BR2_PACKAGE_BATOCERA_TARGET_A3GEN2 || BR2_PACKAGE_BATOCERA_TARGET_X86_ANY
