--- a/package/reglinux/reglinux-emulationstation/Config.in
+++ b/package/reglinux/reglinux-emulationstation/Config.in
@@ -21,6 +21,7 @@ config BR2_PACKAGE_REGLINUX_EMULATIONSTATION
 	select BR2_PACKAGE_JPEG     # for poppler
 	select BR2_PACKAGE_BATOCERA_ES_SYSTEM
 	select BR2_PACKAGE_LIBYUV
+	select BR2_PACKAGE_LUNASVG
 	select BR2_PACKAGE_FFMPEG
 	select BR2_PACKAGE_FFMPEG_GPL
 	select BR2_PACKAGE_FFMPEG_FFPROBE
