--- a/board/qualcomm/sm8250/linux_sm8250-defconfig.config
+++ b/board/qualcomm/sm8250/linux_sm8250-defconfig.config
@@ -3443,7 +3443,7 @@ CONFIG_INPUT_JOYSTICK=y
 # CONFIG_JOYSTICK_AS5011 is not set
 # CONFIG_JOYSTICK_JOYDUMP is not set
 # CONFIG_JOYSTICK_XPAD is not set
-CONFIG_JOYSTICK_ODIN2=m
+CONFIG_JOYSTICK_RETROID=m
 # CONFIG_JOYSTICK_PSXPAD_SPI is not set
 # CONFIG_JOYSTICK_PXRC is not set
 # CONFIG_JOYSTICK_QWIIC is not set
